--- a/ztf_metadata.ipynb
+++ b/ztf_metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 1,
    "id": "de794af9-6e96-4cf4-b6b7-309c250e992d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "id": "5c6f117f-36f4-4d83-8da6-98e0bfa262a4",
    "metadata": {},
    "outputs": [],
@@ -46,29 +46,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "id": "4dd6cb94-5386-44de-8356-0e7cb2ca2984",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('exposures',),\n",
+       " ('fields',),\n",
+       " ('fields_rtree',),\n",
+       " ('fields_rtree_rowid',),\n",
+       " ('fields_rtree_node',),\n",
+       " ('fields_rtree_parent',),\n",
+       " ('refimages',),\n",
+       " ('deepimages',),\n",
+       " ('fieldcorners',),\n",
+       " ('fieldcorners_rtree',),\n",
+       " ('fieldcorners_rtree_rowid',),\n",
+       " ('fieldcorners_rtree_node',),\n",
+       " ('fieldcorners_rtree_parent',)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"SELECT name from sqlite_master WHERE type = 'table'\"\n",
-    "res = query_db(querystr=query)"
+    "res = query_db(querystr=query)\n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "id": "1f4e52c1-3600-4686-bf2e-8f7a7f96a76a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('exposures',),\n",
+       " ('fields',),\n",
+       " ('fields_rtree',),\n",
+       " ('fields_rtree_rowid',),\n",
+       " ('fields_rtree_node',),\n",
+       " ('fields_rtree_parent',),\n",
+       " ('refimages',),\n",
+       " ('deepimages',),\n",
+       " ('fieldcorners',),\n",
+       " ('fieldcorners_rtree',),\n",
+       " ('fieldcorners_rtree_rowid',),\n",
+       " ('fieldcorners_rtree_node',),\n",
+       " ('fieldcorners_rtree_parent',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"SELECT name from sqlite_master WHERE type = 'table'\"\n",
-    "res = query_db(querystr=query)"
+    "res = query_db(querystr=query)\n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "id": "e09a3867-3155-46ff-acae-445e454ec815",
    "metadata": {},
    "outputs": [
@@ -96,7 +144,7 @@
        " ')']"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,13 +157,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "id": "ee8a4618-31ce-4bb1-8821-5e127d334db5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'expid', 'INTEGER', 1, None, 1),\n",
+       " (1, 'field', 'INTEGER', 1, None, 0),\n",
+       " (2, 'filter', 'TEXT', 1, None, 0),\n",
+       " (3, 'obsdate', 'timestamp without time zone', 1, None, 0),\n",
+       " (4, 'ra', 'double precision', 1, None, 0),\n",
+       " (5, 'dec', 'double precision', 1, None, 0),\n",
+       " (6, 'exptime', 'REAL', 1, None, 0),\n",
+       " (7, 'airmass', 'REAL', 1, None, 0),\n",
+       " (8, 'infobits', 'INTEGER', 0, '0', 0),\n",
+       " (9, 'dr', 'INTEGER', 0, None, 0),\n",
+       " (10, 'numsci', 'INTEGER', 0, '0', 0),\n",
+       " (11, 'numdiff', 'INTEGER', 0, '0', 0),\n",
+       " (12, 'fwhm', 'REAL', 0, 'NULL', 0),\n",
+       " (13, 'maglim', 'REAL', 0, 'NULL', 0),\n",
+       " (14, 'scibckgnd', 'REAL', 0, 'NULL', 0),\n",
+       " (15, 'ellip', 'REAL', 0, 'NULL', 0),\n",
+       " (16, 'ellippa', 'REAL', 0, 'NULL', 0)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"PRAGMA table_info( exposures )\"\n",
-    "res = query_db(querystr=query)"
+    "res = query_db(querystr=query)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "aba938d7-594b-42a3-af89-89d5185edb33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CREATE TABLE refimages (',\n",
+       " '    rfid bigint NOT NULL PRIMARY KEY,                    -- Reference ID, IPAC Primary key for reference images',\n",
+       " '    rcid smallint NOT NULL,                              -- Readout Channel ID, see documentation for rcid layout',\n",
+       " '    field integer NOT NULL,',\n",
+       " '    filter smallint NOT NULL,                               -- Filter ID',\n",
+       " '    created timestamp without time zone NOT NULL,',\n",
+       " '    infobits integer DEFAULT 0 NOT NULL',\n",
+       " ')']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"SELECT * from sqlite_master WHERE name = 'refimages'\"\n",
+    "res = query_db(querystr=query)\n",
+    "res[0][-1].split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bdfd5414-565c-4ab5-942d-060b0f7c1e8f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"SELECT expid,infobits FROM exposures\"\n",
+    "res = query_db(querystr=query)\n",
+    "res = pd.DataFrame(res,columns=[\"expid\",\"infobits\"])\n",
+    "res.infobits.unique()"
    ]
   },
   {
