--- a/ztf_observing_log.ipynb
+++ b/ztf_observing_log.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "52ccaa0a-d5fa-4923-a5a8-b0fd2a5fe70b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tdastro.opsim.ztf_opsim import ZTFOpsim, _ztfcam_ccd_gain\n",
+    "from tdastro.astro_utils.mag_flux import mag2flux"
    ]
   },
   {
@@ -16,260 +19,34 @@
    "execution_count": 2,
    "id": "28c4f060-31e0-4793-90a7-12218267e939",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mi/Work/tdastro/tdastro/src/tdastro/opsim/ztf_opsim.py:170: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  self.table = self.table.replace(\"\", np.nan)\n"
+     ]
+    }
+   ],
    "source": [
-    "obs_log = pd.read_parquet('ztfsniadr2/tables/observing_logs.parquet')"
+    "opsim_db = ZTFOpsim.from_db(\"data/ztf_metadata_latest.db\")\n",
+    "obs_log = pd.read_parquet('ztfsniadr2/tables/observing_logs.parquet')\n",
+    "obs_log = obs_log.drop_duplicates(\"expid\")\n",
+    "obs_log[\"filter\"] = obs_log.apply(lambda row: row[\"band\"][-1],axis=1)\n",
+    "obs_log = pd.merge(obs_log, opsim_db.table[[\"expid\",\"filter\",\"exptime\",\"fwhm\",\"obsmjd\",\"obsdate\",\"scibckgnd\",\"ra\",\"dec\"]],on=[\"filter\",\"expid\"])\n",
+    "gain = _ztfcam_ccd_gain\n",
+    "obs_log[\"zp_nJy\"] = mag2flux(obs_log[\"zp\"].values + 2.5*np.log10(gain))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "6d325746-8400-4b6e-9f77-b62f94e0c91f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mjd</th>\n",
-       "      <th>band</th>\n",
-       "      <th>fieldid</th>\n",
-       "      <th>fieldra</th>\n",
-       "      <th>fielddec</th>\n",
-       "      <th>rcid</th>\n",
-       "      <th>maglimit</th>\n",
-       "      <th>zp</th>\n",
-       "      <th>gain</th>\n",
-       "      <th>expid</th>\n",
-       "      <th>infobits</th>\n",
-       "      <th>skynoise</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>58288.171875</td>\n",
-       "      <td>ztfi</td>\n",
-       "      <td>375</td>\n",
-       "      <td>3.787257</td>\n",
-       "      <td>-0.171915</td>\n",
-       "      <td>16</td>\n",
-       "      <td>19.650887</td>\n",
-       "      <td>25.644886</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>53417042</td>\n",
-       "      <td>0</td>\n",
-       "      <td>49.960846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>58288.171875</td>\n",
-       "      <td>ztfi</td>\n",
-       "      <td>375</td>\n",
-       "      <td>3.787257</td>\n",
-       "      <td>-0.171915</td>\n",
-       "      <td>17</td>\n",
-       "      <td>19.612961</td>\n",
-       "      <td>25.651960</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>53417042</td>\n",
-       "      <td>0</td>\n",
-       "      <td>52.075066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>58288.171875</td>\n",
-       "      <td>ztfi</td>\n",
-       "      <td>375</td>\n",
-       "      <td>3.787257</td>\n",
-       "      <td>-0.171915</td>\n",
-       "      <td>18</td>\n",
-       "      <td>19.686562</td>\n",
-       "      <td>25.683561</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>53417042</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50.099094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>58288.171875</td>\n",
-       "      <td>ztfi</td>\n",
-       "      <td>375</td>\n",
-       "      <td>3.787257</td>\n",
-       "      <td>-0.171915</td>\n",
-       "      <td>19</td>\n",
-       "      <td>19.632156</td>\n",
-       "      <td>25.650158</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>53417042</td>\n",
-       "      <td>0</td>\n",
-       "      <td>51.077618</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>58288.171875</td>\n",
-       "      <td>ztfi</td>\n",
-       "      <td>375</td>\n",
-       "      <td>3.787257</td>\n",
-       "      <td>-0.171915</td>\n",
-       "      <td>20</td>\n",
-       "      <td>19.573307</td>\n",
-       "      <td>25.693308</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>53417042</td>\n",
-       "      <td>0</td>\n",
-       "      <td>56.108715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32808490</th>\n",
-       "      <td>59273.558594</td>\n",
-       "      <td>ztfr</td>\n",
-       "      <td>542</td>\n",
-       "      <td>5.338955</td>\n",
-       "      <td>0.205076</td>\n",
-       "      <td>43</td>\n",
-       "      <td>17.924723</td>\n",
-       "      <td>26.281721</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>151955745</td>\n",
-       "      <td>33554440</td>\n",
-       "      <td>440.381805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32808491</th>\n",
-       "      <td>59273.558594</td>\n",
-       "      <td>ztfr</td>\n",
-       "      <td>542</td>\n",
-       "      <td>5.338955</td>\n",
-       "      <td>0.205076</td>\n",
-       "      <td>44</td>\n",
-       "      <td>18.117277</td>\n",
-       "      <td>26.246277</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>151955745</td>\n",
-       "      <td>0</td>\n",
-       "      <td>356.968475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32808492</th>\n",
-       "      <td>59273.558594</td>\n",
-       "      <td>ztfr</td>\n",
-       "      <td>542</td>\n",
-       "      <td>5.338955</td>\n",
-       "      <td>0.205076</td>\n",
-       "      <td>45</td>\n",
-       "      <td>18.143761</td>\n",
-       "      <td>26.199760</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>151955745</td>\n",
-       "      <td>33554432</td>\n",
-       "      <td>333.756622</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32808493</th>\n",
-       "      <td>59273.558594</td>\n",
-       "      <td>ztfr</td>\n",
-       "      <td>542</td>\n",
-       "      <td>5.338955</td>\n",
-       "      <td>0.205076</td>\n",
-       "      <td>46</td>\n",
-       "      <td>18.018276</td>\n",
-       "      <td>26.206276</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>151955745</td>\n",
-       "      <td>33554440</td>\n",
-       "      <td>376.903259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32808494</th>\n",
-       "      <td>59273.558594</td>\n",
-       "      <td>ztfr</td>\n",
-       "      <td>542</td>\n",
-       "      <td>5.338955</td>\n",
-       "      <td>0.205076</td>\n",
-       "      <td>41</td>\n",
-       "      <td>17.939053</td>\n",
-       "      <td>26.295052</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>151955745</td>\n",
-       "      <td>8</td>\n",
-       "      <td>439.976624</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>32808495 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   mjd  band  fieldid   fieldra  fielddec  rcid   maglimit  \\\n",
-       "0         58288.171875  ztfi      375  3.787257 -0.171915    16  19.650887   \n",
-       "1         58288.171875  ztfi      375  3.787257 -0.171915    17  19.612961   \n",
-       "2         58288.171875  ztfi      375  3.787257 -0.171915    18  19.686562   \n",
-       "3         58288.171875  ztfi      375  3.787257 -0.171915    19  19.632156   \n",
-       "4         58288.171875  ztfi      375  3.787257 -0.171915    20  19.573307   \n",
-       "...                ...   ...      ...       ...       ...   ...        ...   \n",
-       "32808490  59273.558594  ztfr      542  5.338955  0.205076    43  17.924723   \n",
-       "32808491  59273.558594  ztfr      542  5.338955  0.205076    44  18.117277   \n",
-       "32808492  59273.558594  ztfr      542  5.338955  0.205076    45  18.143761   \n",
-       "32808493  59273.558594  ztfr      542  5.338955  0.205076    46  18.018276   \n",
-       "32808494  59273.558594  ztfr      542  5.338955  0.205076    41  17.939053   \n",
-       "\n",
-       "                 zp  gain      expid  infobits    skynoise  \n",
-       "0         25.644886   6.2   53417042         0   49.960846  \n",
-       "1         25.651960   6.2   53417042         0   52.075066  \n",
-       "2         25.683561   6.2   53417042         0   50.099094  \n",
-       "3         25.650158   6.2   53417042         0   51.077618  \n",
-       "4         25.693308   6.2   53417042         0   56.108715  \n",
-       "...             ...   ...        ...       ...         ...  \n",
-       "32808490  26.281721   6.1  151955745  33554440  440.381805  \n",
-       "32808491  26.246277   6.1  151955745         0  356.968475  \n",
-       "32808492  26.199760   6.1  151955745  33554432  333.756622  \n",
-       "32808493  26.206276   6.2  151955745  33554440  376.903259  \n",
-       "32808494  26.295052   6.2  151955745         8  439.976624  \n",
-       "\n",
-       "[32808495 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "obs_log"
+    "obs_log.to_parquet(\"data/ztf_observing_log_combined_w_metadata.parquet\")"
    ]
   },
   {
@@ -297,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
